--- a/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
@@ -87,32 +87,48 @@ body {
 }
 
 .form-row select {
-
     padding: 5px;
     font-size: 14px;
     -webkit-appearance: none;
 }
 
+.form-row textarea {
+    font-family: "Helvetica", "Arial", sans-serif;
+    font-size: 14px;
+    border: 1px solid #D6D9DC;
+    border-radius: 3px;
+    min-height: 200px;
+    margin-bottom: 10px;
+    padding: 7px;
+    resize: none;
+}
+
+.form-row .instructions {
+    color: #999999;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
 @media only screen and (min-width: 700px) {
     .speaker-form-header,
     .speaker-form {
-      width: 600px;
+        width: 600px;
     }
     .form-row {
-      flex-direction: row;
-      align-items: flex-start; /* To avoid stretching */
-      margin-bottom: 20px;
+        flex-direction: row;
+        align-items: flex-start; /* To avoid stretching */
+        margin-bottom: 20px;
     }
     .form-row input[type='text'],
     .form-row input[type='email'] {
-      width: 250px;
-      height: initial;
+        width: 250px;
+        height: initial;
     }
     .form-row label {
-      text-align: right;
-      width: 120px;
-      margin-top: 7px;
-      padding-right: 20px;
+        text-align: right;
+        width: 120px;
+        margin-top: 7px;
+        padding-right: 20px;
     }
 
     .legacy-form-row {
@@ -125,7 +141,16 @@ body {
         padding-right: 20px;
     }
     
-      .legacy-form-row legend {
+    .legacy-form-row legend {
         float: left;
     }
+
+    .form-row select {
+        width: 250px;
+    }
+
+    .form-row .instructions {
+        margin-left: 120px;
+    }
+  
 }
