Finished exercise, added final checkbox and submit button, edited css of both properties

--- a/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
@@ -89,7 +89,9 @@ body {
 .form-row select {
     padding: 5px;
     font-size: 14px;
-    -webkit-appearance: none;
+    border: 1px solid #D6D9DC;
+    border-radius: 3px;
+    appearance: none;
 }
 
 .form-row textarea {
@@ -107,6 +109,29 @@ body {
     color: #999999;
     font-size: 14px;
     margin-bottom: 30px;
+}
+
+.form-row .checkbox-label {
+    margin-bottom: 0;
+}
+
+.form-row button {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #5995DA;
+    border: none;
+    border-radius: 3px;
+    padding: 10px 40px;
+    cursor: pointer;
+}
+
+.form-row button:hover {
+    background-color: #76AEED;
+}
+
+.form-row button:active {
+    background-color: #407FC7;
 }
 
 @media only screen and (min-width: 700px) {
@@ -150,6 +175,15 @@ body {
     }
 
     .form-row .instructions {
+        margin-left: 120px;
+    }
+
+    .form-row .checkbox-label {
+        margin-left: 120px;
+        width: auto;
+    }
+
+    .form-row button {
         margin-left: 120px;
     }
   
